# rudis

./: Cargo.toml  README.md  TODO.md  dump.rdb
.github/workflows/: auto-release.yml  ci.yml
benches/: redis_benchmark.rs
src/: error.rs  lib.rs  main.rs
src/commands/: command_helper.rs  connection.rs  errors.rs  hashes.rs  keys.rs  lists.rs  mod.rs  sets.rs  strings.rs  zsets.rs
src/config/: mod.rs
src/data_structures/: hash.rs  list.rs  mod.rs  set.rs  sorted_set.rs  string.rs
src/database/: hashes.rs  keys.rs  lists.rs  mod.rs  sets.rs  strings.rs  traits.rs  zsets.rs
src/networking/: mod.rs  resp.rs
src/persistence/: mod.rs
src/server/: mod.rs
tests/: hdel_test.rs  hkeys_test.rs  hvals_test.rs  integration_tests.rs  unit_tests.rs
